@@ -33,7 +33,11 @@
 #endif
 
 #if !defined(WIN32) && defined(__WIN32__)
-/* This should be a good Borland fix. Alexander J. Oss told us! */
+/* This should be a good Borland fix. */
+#define WIN32
+#endif
+#if !defined(WIN32) && defined(_WIN32)
+/* This works for VS2005 on x64 */
 #define WIN32
 #endif
 
